Remove public from constructor

--- a/docs/smartContracts/tokens/ERC-1155.md
+++ b/docs/smartContracts/tokens/ERC-1155.md
@@ -95,7 +95,7 @@ Here is how to mint and burn ERC-1155 tokens:
           uint public constant Banana = 7;
           uint public immutable ExtraFruitId; //"immutable" can only be changed in the constructor.
 
-          constructor(uint extraFruitIdPick) public ERC1155("https://en.wikipedia.org/wiki/{name}") { //When using safeTransferFrom, have data as 0x00.
+          constructor(uint extraFruitIdPick) ERC1155("https://en.wikipedia.org/wiki/{name}") { //When using safeTransferFrom, have data as 0x00.
               if(extraFruitIdPick > 7) { revert invalidFruitIdNumber(); } //Don't check for negative since uint must be 0 or positive.
               ExtraFruitId = extraFruitIdPick; //"immutable" can only be changed in the constructor.
               _mint(msg.sender, Raspberry,    100*(1 ether), "");  //To send tokens from wallet to wallet, send the following Tx to this contract: "setApprovalForAll(walletToSendTo,true)".
